# optimal

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  index.html  optimal.sublime-project  params.json
doc/html/: annotated.html  class_trajectory-members.html  class_trajectory.html  classes.html  classoptimal_1_1_system-members.html  classoptimal_1_1_system.html  classoptimal_1_1_trajectory-members.html  classoptimal_1_1_trajectory.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  md__r_e_a_d_m_e.html  namespaceoptimal.html  namespaces.html  pages.html  system_8h.html  system_8h_source.html  trajectory_8h.html  trajectory_8h_source.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  namespaces_0.js  pages_0.js  search.js  variables_1.js  variables_2.js
include/: system.h  trajectory.h
src/: system.cpp  trajectory.cpp
test/: system_test.cpp
